[package]
name = "configurable"
version = "0.3.1"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "0BSD"
description = "simple helpers for loading/saving a struct to file in $XDG"

[dependencies]
directories = "1.0.2"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.toml]
version = "0.5.0"
features = ["preserve_order"]
