[package]
name = "configurable"
version = "0.3.5"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "0BSD"
description = "simple helpers for loading/saving a struct to file in $XDG"
repository = "https://github.com/museun/configurable"
readme = "README.md"
keywords = [ "configuraiton" ]

[badges]
# circle-ci = { repository = "museun/twitchchat", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
directories = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"
features = ["preserve_order"]
